Enable format on save for Go and TypeScript + React

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -4,10 +4,12 @@
   },
   "coc.preferences.formatOnSaveFiletypes": [
     "css",
+    "go",
     "html",
     "json",
     "javascript",
-    "typescript"
+    "typescript",
+    "typescriptreact"
   ],
   "coc.source.around.firstMatch": false,
   "coc.source.buffer.firstMatch": false
