Enable autofix on save for eslint

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -13,5 +13,6 @@
     "typescriptreact"
   ],
   "coc.source.around.firstMatch": false,
-  "coc.source.buffer.firstMatch": false
+  "coc.source.buffer.firstMatch": false,
+  "eslint.autoFixOnSave": true
 }
