Set suggest.noselect
This lets me browse the selections by pressing Tab, rather than having
Tab skip to the second selection.

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -13,5 +13,6 @@
   ],
   "coc.source.around.firstMatch": false,
   "coc.source.buffer.firstMatch": false,
-  "eslint.autoFixOnSave": true
+  "eslint.autoFixOnSave": true,
+  "suggest.noselect": true
 }
