--- a/coc-settings.json
+++ b/coc-settings.json
@@ -14,6 +14,7 @@
   "coc.source.around.firstMatch": false,
   "coc.source.buffer.firstMatch": false,
   "eslint.autoFixOnSave": true,
+  "prettier.requireConfig": true,
   "suggest.noselect": true,
   "languageserver": {
     "golangci-lint-languageserver": {
