Make TypeScript lang server always use local tsdk

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -17,6 +17,8 @@
   "eslint.autoFixOnSave": true,
   "prettier.requireConfig": true,
   "suggest.noselect": true,
+  "tsserver.useLocalTsdk": true,
+  "tsserver.tsdk": "./node_modules/typescript/lib",
   "languageserver": {
     "golangci-lint-languageserver": {
       "command": "golangci-lint-langserver",
