--- a/coc-settings.json
+++ b/coc-settings.json
@@ -15,6 +15,9 @@
   "coc.source.around.firstMatch": false,
   "coc.source.buffer.firstMatch": false,
   "eslint.autoFixOnSave": true,
+  "go.goplsEnv": {
+    "GOFLAGS": "-tags=vnetdaemon"
+  },
   "prettier.requireConfig": true,
   "suggest.noselect": true,
   "tsserver.useLocalTsdk": true,
