Use flat config for ESLint

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -15,6 +15,7 @@
   "coc.source.around.firstMatch": false,
   "coc.source.buffer.firstMatch": false,
   "eslint.autoFixOnSave": true,
+  "eslint.experimental.useFlatConfig": true,
   "go.goplsEnv": {
     "GOFLAGS": "-tags=vnetdaemon"
   },
