Fix golangci-lint config

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -36,8 +36,9 @@
           ".golangci.yml",
           "--enable",
           "errcheck",
-          "--out-format",
-          "json",
+          "--output.json.path",
+          "stdout",
+          "--show-stats=false",
           "--issues-exit-code=1"
         ]
       }
